rework css styles and unify views ui

--- a/CogLog.UI/Views/Admin/Login.cshtml
+++ b/CogLog.UI/Views/Admin/Login.cshtml
@@ -18,7 +18,7 @@
         <span asp-validation-for="Password" class="validation-helper-text"></span>
     </div>
     <div class="form-button-group">
-        <input type="submit" value="Log In" class="btn btn-primary" />
+        <input type="submit" value="Log In" class="btn" />
     </div>
 </form>
 </div>
