--- a/CogLog.UI/Views/Blocks/Create.cshtml
+++ b/CogLog.UI/Views/Blocks/Create.cshtml
@@ -1,7 +1,4 @@
 @model BlockCreateVm
-@{
-    ViewData["Title"] = "Create Block";
-}
     
 <div class="form-wrapper">
     <h1 class="form-title">New Block</h1>
@@ -27,8 +24,8 @@
         </div>
 
         <div class="form-button-group">
-            <input type="submit" value="Create" class="btn btn-primary" />
-            <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+            <input type="submit" value="Create" class="btn" />
+            <a asp-action="Index" class="btn ghost">Cancel</a>
         </div>
 
     </form>
