--- a/CogLog.UI/Views/Blocks/Edit.cshtml
+++ b/CogLog.UI/Views/Blocks/Edit.cshtml
@@ -1,7 +1,4 @@
 @model BlockEditVm
-@{
-    ViewData["Title"] = "Edit Block";
-}
 
 <div class="form-wrapper">
     <h1 class="form-title">Edit Block</h1>
@@ -25,8 +22,8 @@
         </div>
 
         <div class="form-button-group">
-            <input type="submit" value="Update" class="btn btn-primary"/>
-            <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+            <input type="submit" value="Update" class="btn"/>
+            <a asp-action="Index" class="btn ghost">Cancel</a>
         </div>
     </form>
 </div>
