--- a/CogLog.UI/Views/Categories/Create.cshtml
+++ b/CogLog.UI/Views/Categories/Create.cshtml
@@ -1,18 +1,16 @@
 @model CategoryCreateVm;
-@{
-    ViewData["Title"] = "Create Category";
-}
+
 
 <div class="form-wrapper">
-    <h1 class="form-title">New Category</h1>
+    <h1 class="form-title">Category</h1>
 
     <form asp-action="Create">
 
         @await Component.InvokeAsync("HierarchyFormGroups", Model)
         
         <div class="form-button-group">
-            <input type="submit" value="Create" class="btn btn-primary" />
-            <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+            <input type="submit" value="Create" class="btn" />
+            <a asp-action="Index" class="btn ghost">Cancel</a>
         </div>
 
     </form>
