--- a/CogLog.UI/Views/Subjects/Create.cshtml
+++ b/CogLog.UI/Views/Subjects/Create.cshtml
@@ -1,7 +1,4 @@
 @model SubjectCreateVm
-@{
-    ViewData["Title"] = "New Subject";
-}
 
 <div class="form-wrapper">
     <h1 class="form-title">New Subject</h1>
@@ -14,8 +11,8 @@
 
         
         <div class="form-button-group">
-            <input type="submit" value="Create" class="btn btn-primary" />
-            <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+            <input type="submit" value="Create" class="btn" />
+            <a asp-action="Index" class="btn ghost">Cancel</a>
         </div>
 
     </form>
