--- a/CogLog.UI/Views/Blocks/Details.cshtml
+++ b/CogLog.UI/Views/Blocks/Details.cshtml
@@ -1,1 +1,7 @@
 @model BlockDetailsVm
+
+<div class="page-header">
+    <h1>@Model.Title</h1>
+    <a asp-action="Edit" asp-route-id="@Model.Id">(edit)</a>
+</div>
+
