--- a/CogLog.UI/Views/Shared/_Layout.cshtml
+++ b/CogLog.UI/Views/Shared/_Layout.cshtml
@@ -6,11 +6,15 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"]</title>
+    @* <link rel="stylesheet" href="~/css/variables.css" asp-append-version="true"/> *@
     <link rel="stylesheet" href="~/css/global.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/css/forms.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/css/pagination.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/css/blocks.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/css/hierarchy.css" asp-append-version="true"/>
+    @* <link rel="stylesheet" href="~/css/layout.css" asp-append-version="true"/> *@
+    @* <link rel="stylesheet" href="~/css/buttons.css" asp-append-version="true"/> *@
+    @* <link rel="stylesheet" href="~/css/navbar.css" asp-append-version="true"/> *@
+    @* <link rel="stylesheet" href="~/css/forms.css" asp-append-version="true"/> *@
+    @* <link rel="stylesheet" href="~/css/pagination.css" asp-append-version="true"/> *@
+    @* <link rel="stylesheet" href="~/css/blocks.css" asp-append-version="true"/> *@
+    @* <link rel="stylesheet" href="~/css/hierarchy.css" asp-append-version="true"/> *@
 </head>
 <body>
 <div style="display: none;">
@@ -29,28 +33,31 @@
                             <span class="bar"></span>
                             <span class="bar"></span>
                         </div>
-                        <ul class="navbar-menu" id="navbar-menu">
-                            <li class="navbar-item">
-                                <a class="navbar-link @(ViewContext.RouteData.Values["controller"].ToString() == "Blocks" ? "active" : "")"
-                                   asp-controller="Blocks" asp-action="Index">Blocks</a>
-                            </li>
-                            <li class="navbar-item">
-                                <a class="navbar-link @(ViewContext.RouteData.Values["controller"].ToString() == "Categories" ? "active" : "")"
-                                   asp-controller="Categories" asp-action="Index">Categories</a>
-                            </li>
-                            <li class="navbar-item">
-                                <a class="navbar-link @(ViewContext.RouteData.Values["controller"].ToString() == "Subjects" ? "active" : "")"
-                                   asp-controller="Subjects" asp-action="Index">Subjects</a>
-                            </li>
-                            <li class="navbar-item">
-                                <a class="navbar-link @(ViewContext.RouteData.Values["controller"].ToString() == "Topics" ? "active" : "")"
-                                   asp-controller="Topics" asp-action="Index">Topics</a>
-                            </li>
-                            <li class="navbar-item">
-                                <a class="navbar-link @(ViewContext.RouteData.Values["controller"].ToString() == "Tags" ? "active" : "")"
-                                   asp-controller="Tags" asp-action="Index">Tags</a>
-                            </li>
-                        </ul>
+                        <div class="navbar-menu-container" id="navbar-menu-container">
+
+                            <ul class="navbar-menu" id="navbar-menu">
+                                <li class="navbar-item">
+                                    <a class="navbar-link @(ViewContext.RouteData.Values["controller"].ToString() == "Blocks" ? "active" : "")"
+                                       asp-controller="Blocks" asp-action="Index">Blocks</a>
+                                </li>
+                                <li class="navbar-item">
+                                    <a class="navbar-link @(ViewContext.RouteData.Values["controller"].ToString() == "Categories" ? "active" : "")"
+                                       asp-controller="Categories" asp-action="Index">Categories</a>
+                                </li>
+                                <li class="navbar-item">
+                                    <a class="navbar-link @(ViewContext.RouteData.Values["controller"].ToString() == "Subjects" ? "active" : "")"
+                                       asp-controller="Subjects" asp-action="Index">Subjects</a>
+                                </li>
+                                <li class="navbar-item">
+                                    <a class="navbar-link @(ViewContext.RouteData.Values["controller"].ToString() == "Topics" ? "active" : "")"
+                                       asp-controller="Topics" asp-action="Index">Topics</a>
+                                </li>
+                                <li class="navbar-item">
+                                    <a class="navbar-link @(ViewContext.RouteData.Values["controller"].ToString() == "Tags" ? "active" : "")"
+                                       asp-controller="Tags" asp-action="Index">Tags</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </nav>
             </header>
