--- a/CogLog.UI/Views/Subjects/Details.cshtml
+++ b/CogLog.UI/Views/Subjects/Details.cshtml
@@ -1,22 +1,27 @@
 @model SubjectDetailsVm
-@{
-    ViewData["Title"] = "Subject Details";
+
+<div class="page-header">
+    <h1>@Model.CapitalizedName</h1>
+    <a asp-action="Edit" asp-route-id="@Model.Id">(edit)</a>
+</div>
+
+@if (!string.IsNullOrWhiteSpace(Model.Description))
+{
+    <div class="page-description">@Model.Description</div>
 }
 
-<header>
-    <h1>@Model.CapitalizedName</h1>
-</header>
 
 <div class="section-header">
     <h2>Topics</h2>
+    <a asp-controller="Topics" asp-action="Create" asp-route-subjectId="@Model.Id">+</a>
 </div>
 
 
-<ul class="hierarchy-list">
+<ul class="inline-list">
     @foreach (var item in Model.Topics)
     {
-        <li class="hierarchy-item">
-            <a class="hierarchy-link" asp-controller="Topics" asp-action="Details" asp-route-id="@item.Id">
+        <li >
+            <a  asp-controller="Topics" asp-action="Details" asp-route-id="@item.Id">
                 @item.Name
             </a>
         </li>
@@ -25,18 +30,18 @@
 
 <div class="section-header">
     <h2>Tags</h2>
+    <a asp-controller="Tags" asp-action="Create" asp-route-subjectId="@Model.Id">+</a>
 </div>
 
 
-<ul class="hierarchy-list">
+<ul class="inline-list">
     @foreach (var item in Model.Tags)
     {
-        <li class="hierarchy-item">
-            <a class="hierarchy-link" asp-controller="Tags" asp-action="Details" asp-route-id="@item.Id">
+        <li >
+            <a  asp-controller="Tags" asp-action="Details" asp-route-id="@item.Id">
                 @item.Name
             </a>
         </li>
     }
 </ul>
 
-@await Component.InvokeAsync("FloatingActionButton", new {actionName = "Edit", routeId = Model.Id})
