--- a/CogLog.UI/Views/Subjects/Edit.cshtml
+++ b/CogLog.UI/Views/Subjects/Edit.cshtml
@@ -1,31 +1,23 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @model SubjectEditVm
-@{
-    ViewData["Title"] = "Edit Subject";
-}
+
 
 <div class="form-wrapper">
     <h1 class="form-title">Edit Subject</h1>
-
     <form asp-action="Edit">
         <input type="hidden" asp-for="Id" />
-
         @await Component.InvokeAsync("HierarchyFormGroups", Model)
-
         @await Component.InvokeAsync("CategorySelector", new {categoryId = Model.CategoryId})
-
-
         <div class="form-button-group">
-            <input type="submit" value="Update" class="btn btn-primary" />
-            <a asp-action="Details" asp-route-id="@Model.Id" class="btn btn-secondary">Cancel</a>
+            <input type="submit" value="Update" class="btn" />
+            <a asp-action="Details" asp-route-id="@Model.Id" class="btn ghost">Cancel</a>
         </div>
-
     </form>
 </div>
 
 <form asp-action="Delete" class="delete-form">
     <input type="hidden" asp-for="Id" />
-    <input type="submit" value="Delete" class="btn btn-danger" />
+    <input type="submit" value="Delete" class="btn danger" />
 </form>
 
 
