--- a/CogLog.UI/Views/Topics/Index.cshtml
+++ b/CogLog.UI/Views/Topics/Index.cshtml
@@ -1,23 +1,15 @@
-@model IEnumerable<TopicMinimalVm>    
-@{
-    ViewData["Title"] = "Topics";
-}
-    
-<header>
-    <h1>Topics</h1>
-</header>
+@model IEnumerable<TopicMinimalVm>
 
-
-
-<ul class="hierarchy-list">
+<ul class="inline-list">
+    <li class="special-item">
+        <a asp-action="Create" class="special-link">Create New</a>
+    </li>
     @foreach (var item in Model)
     {
-        <li class="hierarchy-item">
-            <a class="hierarchy-link" asp-action="Details" asp-route-id="@item.Id">
+        <li>
+            <a asp-action="Details" asp-route-id="@item.Id">
                 @item.Name
-            </a>
-        </li>
+            </a></li>
     }
 </ul>
 
-@await Component.InvokeAsync("FloatingActionButton", new {actionName = "Create"})
