Fix auth guards

--- a/CogLog.UI/Views/Auth/Login.cshtml
+++ b/CogLog.UI/Views/Auth/Login.cshtml
@@ -9,12 +9,12 @@
 <form asp-action="Login">
     <div class="form-group">
         <label asp-for="Email" class="form-label"></label>
-        <input asp-for="Email" type="email" class="form-control" />
+        <input asp-for="Email" type="email" class="form-control" value="adamjnav@gmail.com" />
         <span asp-validation-for="Email" class="validation-helper-text"></span>
     </div>
     <div class="form-group">
         <label asp-for="Password" class="form-label"></label>
-        <input asp-for="Password" type="password" class="form-control" />
+        <input asp-for="Password" type="password" class="form-control" value="!6G*opNmG@fju4rCdMT_" />
         <span asp-validation-for="Password" class="validation-helper-text"></span>
     </div>
     <div class="form-button-group">
