--- a/CogLog.UI/Views/Blocks/_BlockListItem.cshtml
+++ b/CogLog.UI/Views/Blocks/_BlockListItem.cshtml
@@ -6,7 +6,7 @@
     <div class="card-header">
         <div class="card-header-top">
             <div class="title-container">
-                @if (User.IsInRole(Roles.Administrator))
+                @if (User.IsInRole(AuthConstants.Roles.Administrator))
                 {
                     <a asp-action="Edit" asp-route-id="@Model.Id" class="card-title">@Model.Title</a>
                 }
@@ -15,7 +15,7 @@
                     <div class="card-title">@Model.Title</div>
                 }
             </div>
-            @if (User.IsInRole(Roles.Administrator) && !string.IsNullOrEmpty(@Model.Url))
+            @if (User.IsInRole(AuthConstants.Roles.Administrator) && !string.IsNullOrEmpty(@Model.Url))
             {
                 <a href="@Model.Url" class="external-link" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
@@ -47,7 +47,7 @@
         {
             @foreach (var item in Model.Topics)
             {
-                @if (User.IsInRole(Roles.Administrator))
+                @if (User.IsInRole(AuthConstants.Roles.Administrator))
                 {
                     <a asp-controller="Topics" asp-action="Details" asp-route-id="@item.Id" class="badge">@item.Name</a>
 
@@ -63,7 +63,7 @@
         {
             @foreach (var item in Model.Tags)
             {
-                @if (User.IsInRole(Roles.Administrator))
+                @if (User.IsInRole(AuthConstants.Roles.Administrator))
                 {
                     <a asp-controller="Tags" asp-action="Details" asp-route-id="@item.Id" class="badge">@item.Name</a>
 
