--- a/CogLog.UI/wwwroot/css/layout.css
+++ b/CogLog.UI/wwwroot/css/layout.css
@@ -1,3 +1,17 @@
+.guest-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: var(--bg-space-1) 0;
+    /*background-color: lightgreen;*/
+}
+
+.guest-header h1 {
+    font-size: var(--fs-xl);
+    color: var(--text);
+}
+
+
 .page-header {
     position: relative;
     display: flex;
