--- a/CogLog.UI/Views/_ViewImports.cshtml
+++ b/CogLog.UI/Views/_ViewImports.cshtml
@@ -9,5 +9,6 @@
 @using CogLog.UI.Models.Subject
 @using CogLog.UI.Models.Tag
 @using CogLog.UI.Models.Topic
+@using CogLog.UI.Models.Word
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper CogLog.UI.TagHelpers.SvgIconTagHelper, CogLog.UI
