fix index page header and sign out redir path

--- a/Vonavulary.UI/Views/Words/Index.cshtml
+++ b/Vonavulary.UI/Views/Words/Index.cshtml
@@ -6,7 +6,7 @@
 
 
 <div class="page-header">
-    <h1>Vocabulary</h1>
+    <h1>Vonavulary</h1>
     @if (User.IsInRole(AuthConstants.Roles.Administrator))
     {
         <a asp-action="Create">Add</a>
