--- a/Vonavulary.UI/wwwroot/css/cards.css
+++ b/Vonavulary.UI/wwwroot/css/cards.css
@@ -1,14 +1,14 @@
 .card-list {
     display: flex;
     flex-direction: column;
-    gap: var(--bg-space-2);
+    gap: var(--bg-space-1);
     padding: var(--bg-space-2) 0;
 }
 
 .card {
     display: flex;
     flex-direction: column;
-    gap: var(--bg-space-1);
+    /*gap: var(--bg-space-1);*/
 }
 
 .card-header {
@@ -20,21 +20,8 @@
     display: flex;
     flex-direction: row;
     height: var(--bg-space-1);
-}
-
-.card-header-bottom {
-    display: flex;
-    align-items: center;
-    height: var(--bg-space-1);
     gap: var(--space-3);
-    font-size: var(--fs-xs);
-    color: var(--surface-text-subtle);
-}
-
-.title-container {
-    display: flex;
-    gap: var(--space-4);
-    flex: 1;
+    align-items: center;
 }
 
 .card-title {
@@ -42,6 +29,16 @@
     font-weight: 600;
     color: var(--surface-text);
 }
+
+.card-info-container {
+    font-size: var(--fs-xs);
+    color: var(--surface-text-subtle);
+    gap: var(--space-3);
+    display: flex;
+    align-items: center;
+}
+
+
 
 .card-content {
     font-size: var(--fs-sm);
